--- a/forex/about-us/licenses-and-regulations.html
+++ b/forex/about-us/licenses-and-regulations.html
@@ -5,8 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Licenses and Regulations - Forex 24</title>
-  <!-- <link rel="stylesheet" href="js/slick/slick.css"/> -->
-  <!-- <link rel="stylesheet" href="js/slick/slick-theme.css"/> -->
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
@@ -21,13 +19,13 @@
           <ul class="page-header__menu">
             <li class="page-header__item"><a href="../index.html">Home</a></li>
             <li class="page-header__item"><a class="page-header__item--active" href="#">About</a></li>
-            <li class="page-header__item"><a href="#">Trading</a></li>
-            <li class="page-header__item"><a href="#">Resources</a></li>
+            <li class="page-header__item"><a href="../trading/account-types.html">Trading</a></li>
+            <li class="page-header__item"><a href="../resources/glossary.html">Resources</a></li>
             <li class="page-header__item"><a href="#">Partners</a></li>
-            <li class="page-header__item"><a href="#">Contact Us</a></li>
+            <li class="page-header__item"><a href="../contact-us/contact-us.html">Contact Us</a></li>
           </ul>
           <div class="page-header__user-menu">
-            <a class="page-header__link  page-header__link--violet" href="#">Open live account</a>
+            <a class="page-header__link  page-header__link--violet" href="../register/registration.html">Open live account</a>
             <a class="page-header__link  page-header__link--black" href="#">Login</a>
           </div>
         </div>
@@ -37,17 +35,17 @@
   <section class="sub-menu">
     <div class="container">
       <div class="sub-menu__flex">
-        <p>Licenses</p>
+        <p>Licenses and Regulations</p>
         <div class="sub-menu__box  sub-menu__box--about">
           <a class="sub-menu__logo" href="../index.html">
             <img src="../img/logo-menu.png" alt="Forex24">
           </a>
-          <a href="#">ACCOUNT TYPES</a>
-          <a href="#">ACCOUNT COMPARISON</a>
-          <a href="#">PRODUCT SPECIFICATION</a>
-          <a href="#">TRADING SPECIFICATION</a>
-          <a href="#">FUNDING AND WITHDROVAL</a>
-          <a href="#">ANNOUNCEMENTS</a>
+          <a style="color: gray">LICENSES AND REGULATIONS</a>
+          <a href="security-of-funds.html">SECURITY OF FUNDS</a>
+          <a href="#">STP Broker</a>
+          <a href="legal-documents.html">LEGAL DOCUMENTS</a>
+          <a href="kids.html">KIDs</a>
+          <a href="careers.html">CAREERS</a>
           <div class="sub-menu__social">
             <a class="sub-menu__link  sub-menu__link--facebook" href="#"></a>
             <a class="sub-menu__link  sub-menu__link--google" href="#"></a>
