--- a/forex/index.html
+++ b/forex/index.html
@@ -17,15 +17,15 @@
       <div class="container">
         <div class="page-header__flex">
           <ul class="page-header__menu">
-            <li class="page-header__item"><a href="#">Home</a></li>
-            <li class="page-header__item"><a href="#">About</a></li>
-            <li class="page-header__item"><a href="#">Trading</a></li>
-            <li class="page-header__item"><a href="#">Resources</a></li>
+            <li class="page-header__item"><a class="page-header__item--active">Home</a></li>
+            <li class="page-header__item"><a href="about-us/about-us.html">About</a></li>
+            <li class="page-header__item"><a href="trading/account-types.html">Trading</a></li>
+            <li class="page-header__item"><a href="resources/glossary.html">Resources</a></li>
             <li class="page-header__item"><a href="#">Partners</a></li>
-            <li class="page-header__item"><a href="#">Contact Us</a></li>
+            <li class="page-header__item"><a href="contact-us/contact-us.html">Contact Us</a></li>
           </ul>
           <div class="page-header__user-menu">
-            <a class="page-header__link  page-header__link--violet" href="#">Open live account</a>
+            <a class="page-header__link  page-header__link--violet" href="register/registration.html">Open live account</a>
             <a class="page-header__link  page-header__link--black" href="#">Login</a>
           </div>
         </div>
