--- a/forex/trading/platforms.html
+++ b/forex/trading/platforms.html
@@ -18,14 +18,14 @@
           </a> -->
           <ul class="page-header__menu">
             <li class="page-header__item"><a href="../index.html">Home</a></li>
-            <li class="page-header__item"><a class="page-header__item--active" href="#">About</a></li>
-            <li class="page-header__item"><a href="#">Trading</a></li>
-            <li class="page-header__item"><a href="#">Resources</a></li>
+            <li class="page-header__item"><a href="../about-us/about-us.html">About</a></li>
+            <li class="page-header__item"><a class="page-header__item--active" href="#">Trading</a></li>
+            <li class="page-header__item"><a href="../resources/glossary.html">Resources</a></li>
             <li class="page-header__item"><a href="#">Partners</a></li>
-            <li class="page-header__item"><a href="#">Contact Us</a></li>
+            <li class="page-header__item"><a href="../contact-us/contact-us.html">Contact Us</a></li>
           </ul>
           <div class="page-header__user-menu">
-            <a class="page-header__link  page-header__link--violet" href="#">Open live account</a>
+            <a class="page-header__link  page-header__link--violet" href="../register/registration.html">Open live account</a>
             <a class="page-header__link  page-header__link--black" href="#">Login</a>
           </div>
         </div>
@@ -34,7 +34,7 @@
   </header>
   <section class="sub-menu  sub-menu--forex">
     <div class="container">
-      <div class="sub-menu__flex  sub-menu__flex--platform">
+      <div class="sub-menu__flex  sub-menu__box--trading">
         <div class="sub-menu__platform-column">
           <p>Platforms</p>
           <div class="sub-menu__platform">
@@ -47,12 +47,12 @@
           <a class="sub-menu__logo" href="../index.html">
             <img src="../img/logo-menu.png" alt="Forex24">
           </a>
-          <a href="#">ACCOUNT TYPES</a>
-          <a href="#">ACCOUNT COMPARISON</a>
-          <a href="#">PRODUCT SPECIFICATION</a>
-          <a href="#">TRADING SPECIFICATION</a>
-          <a href="#">FUNDING AND WITHDROVAL</a>
-          <a href="#">ANNOUNCEMENTS</a>
+          <a href="account-types.html">ACCOUNT TYPES</a>
+          <a href="account-comparison.html">ACCOUNT COMPARISON</a>
+          <a href="product-specification.html">PRODUCT SPECIFICATION</a>
+          <a href="trading-specification.html">TRADING SPECIFICATION</a>
+          <a style="color: gray">PLATFORMS</a>
+          <a href="funding-and-withdrawal.html">FUNDING AND WITHDRAWAL</a>
           <div class="sub-menu__social">
             <a class="sub-menu__link  sub-menu__link--facebook" href="#"></a>
             <a class="sub-menu__link  sub-menu__link--google" href="#"></a>
