--- a/forex/about-us/careers.html
+++ b/forex/about-us/careers.html
@@ -4,9 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Funding and Widtdrawal - Forex 24</title>
-  <!-- <link rel="stylesheet" href="js/slick/slick.css"/> -->
-  <!-- <link rel="stylesheet" href="js/slick/slick-theme.css"/> -->
+  <title>Careers - Forex 24</title>
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
@@ -20,14 +18,14 @@
           </a> -->
           <ul class="page-header__menu">
             <li class="page-header__item"><a href="../index.html">Home</a></li>
-            <li class="page-header__item"><a href="#">About</a></li>
-            <li class="page-header__item"><a class="page-header__item--active" href="#">Trading</a></li>
-            <li class="page-header__item"><a href="#">Resources</a></li>
+            <li class="page-header__item"><a class="page-header__item--active" href="#">About</a></li>
+            <li class="page-header__item"><a href="../trading/account-types.html">Trading</a></li>
+            <li class="page-header__item"><a href="../resources/glossary.html">Resources</a></li>
             <li class="page-header__item"><a href="#">Partners</a></li>
-            <li class="page-header__item"><a href="#">Contact Us</a></li>
+            <li class="page-header__item"><a href="../contact-us/contact-us.html">Contact Us</a></li>
           </ul>
           <div class="page-header__user-menu">
-            <a class="page-header__link  page-header__link--violet" href="#">Open live account</a>
+            <a class="page-header__link  page-header__link--violet" href="../register/registration.html">Open live account</a>
             <a class="page-header__link  page-header__link--black" href="#">Login</a>
           </div>
         </div>
@@ -37,17 +35,17 @@
   <section class="sub-menu">
     <div class="container">
       <div class="sub-menu__flex">
-        <p>Funding and Withdrawal</p>
+        <p>Careers</p>
         <div class="sub-menu__box  sub-menu__box--about">
           <a class="sub-menu__logo" href="../index.html">
             <img src="../img/logo-menu.png" alt="Forex24">
           </a>
-          <a href="#">ACCOUNT TYPES</a>
-          <a href="#">ACCOUNT COMPARISON</a>
-          <a href="#">PRODUCT SPECIFICATION</a>
-          <a href="#">TRADING SPECIFICATION</a>
-          <a href="#">FUNDING AND WITHDROVAL</a>
-          <a href="#">ANNOUNCEMENTS</a>
+          <a href="licenses-and-regulations">LICENSES AND REGULATIONS</a>
+          <a href="security-of-funds.html">SECURITY OF FUNDS</a>
+          <a href="#">STP Broker</a>
+          <a href="legal-documents.html">LEGAL DOCUMENTS</a>
+          <a href="kids.html">KIDs</a>
+          <a style="color: gray">CAREERS</a>
           <div class="sub-menu__social">
             <a class="sub-menu__link  sub-menu__link--facebook" href="#"></a>
             <a class="sub-menu__link  sub-menu__link--google" href="#"></a>
@@ -61,188 +59,21 @@
       </div>
     </div>
   </section>
-  <section class="funding">
+  <section class="careers">
     <div class="container">
-      <table>
-        <tr class="funding__title">
-          <th>Payment Method</th>
-          <th>Deposit Fee</th>
-          <th>Deposit Time</th>
-          <th>Withdrawal Fee</th>
-          <th>Widthdrawal Processing Time</th>
-        </tr>
-        <tr>
-          <td class="funding__pay-img">
-            <!-- <img src="../img/table-1.png" alt=""> -->
-          </td>
-          <td>Covered by Us!</td>
-          <td>1 hour</td>
-          <td>1 EUR*</td>
-          <td>1 Working Day**</td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>Covered by Us!</td>
-          <td>2-5 working days</td>
-          <td>Dependent on amount<br>& banks involved</td>
-          <td>1 Working Day**<br><a href="#">Deposit Bank Accounts</a></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>Covered by Us!</td>
-          <td>1 hour</td>
-          <td>0.15 EUR</td>
-          <td>1 Working Day</td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>Covered by Us!</td>
-          <td>1 hour</td>
-          <td>0.15 EUR</td>
-          <td>1 Working Day</td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>Covered by Us!</td>
-          <td>1 hour</td>
-          <td>0.15 EUR</td>
-          <td>1 Working Day</td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>Covered by Us!</td>
-          <td>1 hour</td>
-          <td>0.15 EUR</td>
-          <td>1 Working Day</td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>Covered by Us!</td>
-          <td>1 hour</td>
-          <td>0.15 EUR</td>
-          <td>1 Working Day</td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>Covered by Us!</td>
-          <td>1 hour</td>
-          <td>N/A</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>Covered by Us!</td>
-          <td>1 hour</td>
-          <td>N/A</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>Covered by Us!</td>
-          <td>1 hour</td>
-          <td>N/A</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>Covered by Us!</td>
-          <td>1 hour</td>
-          <td>N/A</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>Covered by Us!</td>
-          <td>1 hour</td>
-          <td>N/A</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>Covered by Us!</td>
-          <td>1 hour</td>
-          <td>N/A</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>Covered by Us!</td>
-          <td>1 hour</td>
-          <td>N/A</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>Covered by Us!</td>
-          <td>1 hour</td>
-          <td>N/A</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>Covered by Us!</td>
-          <td>1 hour</td>
-          <td>N/A</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>Covered by Us!</td>
-          <td>1 hour</td>
-          <td>N/A</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>Covered by Us!</td>
-          <td>1 hour</td>
-          <td>N/A</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>Covered by Us!</td>
-          <td>1 hour</td>
-          <td>N/A</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>Covered by Us!</td>
-          <td>1 hour</td>
-          <td>N/A</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>Covered by Us!</td>
-          <td>1 hour</td>
-          <td>2%</td>
-          <td>1 Working Day</td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>Covered by Us!</td>
-          <td>1 hour</td>
-          <td>6% + 0.15 EUR</td>
-          <td>1 Working Day</td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>Covered by Us!</td>
-          <td>1 hour</td>
-          <td>2.8%</td>
-          <td>1 Working Day</td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>Covered by Us!</td>
-          <td>1 hour</td>
-          <td>4.9%</td>
-          <td>1 Working Day</td>
-        </tr>
-      </table>
-      <p class="funding__pb">*An additional €5 fee will apply for amounts above the initial deposited amount.<br>**It can take an additional 2-5 working days for the banks to process the amount into your account.</p>
+      <p>We offer a challenging and rewarding working environment, where every employee counts and can make a difference.</p>
+      <p>We believe in the value of our people and their input, the benefits of teamwork and the sense of belonging to our organisation.</p>
+      <p>We are passionate about developing our people and provide long-term career paths.</p>
+      <p>We are governed by the European Markets in Financial Instruments Directive (MiFID), fully supporting its purpose to provide unified investment services regulatory management in the European Economic Area (EEA), for fair practice, increasing efficiency, competition, consumer and employee protection.</p>
+      <p>We abide by the European Labour Law and the requirements for best employment practices as well as providing high levels of worker satisfaction.</p>
+      <div class="careers__flex">
+        <div class="careers__box  careers__box--support">
+          <a href="#">Customer Support (French, Italian, German, Portuguese, Spanish, Swedish)</a>
+        </div>
+        <div class="careers__box  careers__box--media">
+          <a href="#">Social Media Manager</a>
+        </div>
+      </div>
     </div>
   </section>
   <section class="payment  payment--temp">
