--- a/forex/about-us/security-of-funds.html
+++ b/forex/about-us/security-of-funds.html
@@ -4,9 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Kids - Forex 24</title>
-  <!-- <link rel="stylesheet" href="js/slick/slick.css"/> -->
-  <!-- <link rel="stylesheet" href="js/slick/slick-theme.css"/> -->
+  <title>Security of Funds - Forex 24</title>
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
@@ -20,14 +18,14 @@
           </a> -->
           <ul class="page-header__menu">
             <li class="page-header__item"><a href="../index.html">Home</a></li>
-            <li class="page-header__item"><a href="#">About</a></li>
-            <li class="page-header__item"><a class="page-header__item--active" href="#">Trading</a></li>
-            <li class="page-header__item"><a href="#">Resources</a></li>
+            <li class="page-header__item"><a class="page-header__item--active" href="#">About</a></li>
+            <li class="page-header__item"><a href="../trading/account-types.html">Trading</a></li>
+            <li class="page-header__item"><a href="../resources/glossary.html">Resources</a></li>
             <li class="page-header__item"><a href="#">Partners</a></li>
-            <li class="page-header__item"><a href="#">Contact Us</a></li>
+            <li class="page-header__item"><a href="../contact-us/contact-us.html">Contact Us</a></li>
           </ul>
           <div class="page-header__user-menu">
-            <a class="page-header__link  page-header__link--violet" href="#">Open live account</a>
+            <a class="page-header__link  page-header__link--violet" href="../register/registration.html">Open live account</a>
             <a class="page-header__link  page-header__link--black" href="#">Login</a>
           </div>
         </div>
@@ -37,17 +35,17 @@
   <section class="sub-menu">
     <div class="container">
       <div class="sub-menu__flex">
-        <p>Kids</p>
+        <p>Security of Funds</p>
         <div class="sub-menu__box  sub-menu__box--about">
           <a class="sub-menu__logo" href="../index.html">
             <img src="../img/logo-menu.png" alt="Forex24">
           </a>
-          <a href="#">ACCOUNT TYPES</a>
-          <a href="#">ACCOUNT COMPARISON</a>
-          <a href="#">PRODUCT SPECIFICATION</a>
-          <a href="#">TRADING SPECIFICATION</a>
-          <a href="#">FUNDING AND WITHDROVAL</a>
-          <a href="#">ANNOUNCEMENTS</a>
+          <a href="licenses-and-regulations">LICENSES AND REGULATIONS</a>
+          <a style="color: gray">SECURITY OF FUNDS</a>
+          <a href="#">STP Broker</a>
+          <a href="legal-documents.html">LEGAL DOCUMENTS</a>
+          <a href="kids.html">KIDs</a>
+          <a href="careers.html">CAREERS</a>
           <div class="sub-menu__social">
             <a class="sub-menu__link  sub-menu__link--facebook" href="#"></a>
             <a class="sub-menu__link  sub-menu__link--google" href="#"></a>
@@ -61,23 +59,15 @@
       </div>
     </div>
   </section>
-  <section class="kids">
+  <section class="security">
     <div class="container">
-      <p class="kids__pt">In order to help you better understand our products and services and the nature, risks, costs, potential gains and losses associated with them – we developed Key Information Documents (KIDs). These are categorised below into four major asset classes and include CFDs on Currency pairs, Indices, Commodities, Equities or other OTC derivative products.</p>     
-      <p>If you have any questions, contact Forex24 customer support team at <a href="mailto:support@forex24.com">support@forex24.com</a>.</p>
-      <p>Key Information Documents</p>
-      <p>
-        <a href="#">Forex CFDs</a>
-      </p>
-      <p>
-        <a href="#">Treasury and Commodities CFDs</a>
-      </p>
-      <p>
-        <a href="#">Indices CFDs</a>
-      </p>
-      <p class="kids__pb">
-        <a href="#">Stocks CFDs</a>
-      </p>
+      <div class="security__box">
+        <p><b>Regulation</b><br>Forex24 Global is the brand name of Lydya Financials Ltd, who is authorised and regulated by the Cyprus Securities and Exchange Commission (CySEC) with licence number 300/16. CySEC is a member of the European Securities and Markets Authority (ESMA), and is the supervisory and regulatory authority for investment firms in Cyprus.</p>
+        <p><b>Segregation of Funds</b><br>As a regulatory requirement, client funds are kept in separate clients’ accounts in top tier EU banks, to be used only for client trading and are totally separate from the company’s own funds. The company only works with regulated payment service providers.</p>
+        <p><b>Negative Balance Protection</b><br>Forex24 Global offers Negative Balance Protection to all of its clients, which is a guarantee a client cannot lose more money than they invested with the company.</p>
+        <p><b>Investor Compensation Fund</b><br>Forex24 Global is a member of the Investor Compensation Fund, which provides covered clients the extra security of receiving compensation from the fund for any claims against the company not fulfilling its obligations. For further details please see our ICF document.</p>
+        <p><b>Funding and Website Securityе</b><br>We use level 1 PCI DSS compliant payment providers that use the highest level of online security when funding your account. We also adopt the SSL (Secure Sockets Layer) network security protocol that keeps your personal online communication and data with us private and secure.</p>
+      </div>
     </div>
   </section>
   <section class="payment  payment--temp">
