--- a/forex/trading/account-types.html
+++ b/forex/trading/account-types.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Trading - Forex 24</title>
+  <title>Account Types - Forex 24</title>
   <!-- <link rel="stylesheet" href="js/slick/slick.css"/> -->
   <!-- <link rel="stylesheet" href="js/slick/slick-theme.css"/> -->
   <link rel="stylesheet" href="../css/style.min.css">
@@ -20,14 +20,14 @@
           </a> -->
           <ul class="page-header__menu">
             <li class="page-header__item"><a href="../index.html">Home</a></li>
-            <li class="page-header__item"><a href="#">About</a></li>
+            <li class="page-header__item"><a href="../about-us/about-us.html">About</a></li>
             <li class="page-header__item"><a class="page-header__item--active" href="#">Trading</a></li>
-            <li class="page-header__item"><a href="#">Resources</a></li>
+            <li class="page-header__item"><a href="../resources/glossary.html">Resources</a></li>
             <li class="page-header__item"><a href="#">Partners</a></li>
-            <li class="page-header__item"><a href="#">Contact Us</a></li>
+            <li class="page-header__item"><a href="../contact-us/contact-us.html">Contact Us</a></li>
           </ul>
           <div class="page-header__user-menu">
-            <a class="page-header__link  page-header__link--violet" href="#">Open live account</a>
+            <a class="page-header__link  page-header__link--violet" href="../register/registration.html">Open live account</a>
             <a class="page-header__link  page-header__link--black" href="#">Login</a>
           </div>
         </div>
@@ -38,16 +38,16 @@
     <div class="container">
       <div class="sub-menu__flex">
         <p>Account Types</p>
-        <div class="sub-menu__box  sub-menu__box--about">
+        <div class="sub-menu__box  sub-menu__box--trading">
           <a class="sub-menu__logo" href="../index.html">
             <img src="../img/logo-menu.png" alt="Forex24">
           </a>
-          <a href="#">ACCOUNT TYPES</a>
-          <a href="#">ACCOUNT COMPARISON</a>
-          <a href="#">PRODUCT SPECIFICATION</a>
-          <a href="#">TRADING SPECIFICATION</a>
-          <a href="#">FUNDING AND WITHDROVAL</a>
-          <a href="#">ANNOUNCEMENTS</a>
+          <a style="color: gray">ACCOUNT TYPES</a>
+          <a href="account-comparison.html">ACCOUNT COMPARISON</a>
+          <a href="product-specification.html">PRODUCT SPECIFICATION</a>
+          <a href="trading-specification.html">TRADING SPECIFICATION</a>
+          <a href="platforms.html">PLATFORMS</a>
+          <a href="funding-and-withdrawal.html">FUNDING AND WITHDRAWAL</a>
           <div class="sub-menu__social">
             <a class="sub-menu__link  sub-menu__link--facebook" href="#"></a>
             <a class="sub-menu__link  sub-menu__link--google" href="#"></a>
