--- a/forex/trading/funding-and-withdrawal.html
+++ b/forex/trading/funding-and-withdrawal.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Registration - Forex 24</title>
+  <title>Funding and Widtdrawal - Forex 24</title>
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
@@ -18,14 +18,14 @@
           </a> -->
           <ul class="page-header__menu">
             <li class="page-header__item"><a href="../index.html">Home</a></li>
-            <li class="page-header__item"><a class="page-header__item--active" href="#">About</a></li>
-            <li class="page-header__item"><a href="#">Trading</a></li>
-            <li class="page-header__item"><a href="#">Resources</a></li>
+            <li class="page-header__item"><a href="../about-us/about-us.html">About</a></li>
+            <li class="page-header__item"><a class="page-header__item--active" href="#">Trading</a></li>
+            <li class="page-header__item"><a href="../resources/glossary.html">Resources</a></li>
             <li class="page-header__item"><a href="#">Partners</a></li>
-            <li class="page-header__item"><a href="#">Contact Us</a></li>
+            <li class="page-header__item"><a href="../contact-us/contact-us.html">Contact Us</a></li>
           </ul>
           <div class="page-header__user-menu">
-            <a class="page-header__link  page-header__link--violet" href="#">Open live account</a>
+            <a class="page-header__link  page-header__link--violet" href="../register/registration.html">Open live account</a>
             <a class="page-header__link  page-header__link--black" href="#">Login</a>
           </div>
         </div>
@@ -35,17 +35,17 @@
   <section class="sub-menu">
     <div class="container">
       <div class="sub-menu__flex">
-        <p>Registration</p>
-        <div class="sub-menu__box  sub-menu__box--about">
+        <p>Funding and Withdrawal</p>
+        <div class="sub-menu__box  sub-menu__box--trading">
           <a class="sub-menu__logo" href="../index.html">
             <img src="../img/logo-menu.png" alt="Forex24">
           </a>
-          <a href="#">ACCOUNT TYPES</a>
-          <a href="#">ACCOUNT COMPARISON</a>
-          <a href="#">PRODUCT SPECIFICATION</a>
-          <a href="#">TRADING SPECIFICATION</a>
-          <a href="#">FUNDING AND WITHDROVAL</a>
-          <a href="#">ANNOUNCEMENTS</a>
+          <a href="account-types.html">ACCOUNT TYPES</a>
+          <a href="account-comparison.html">ACCOUNT COMPARISON</a>
+          <a href="product-specification.html">PRODUCT SPECIFICATION</a>
+          <a href="trading-specification.html">TRADING SPECIFICATION</a>
+          <a href="platforms.html">PLATFORMS</a>
+          <a style="color: gray">FUNDING AND WITHDRAWAL</a>
           <div class="sub-menu__social">
             <a class="sub-menu__link  sub-menu__link--facebook" href="#"></a>
             <a class="sub-menu__link  sub-menu__link--google" href="#"></a>
@@ -59,56 +59,188 @@
       </div>
     </div>
   </section>
-  <section class="registration">
+  <section class="funding">
     <div class="container">
-      <form class="form" action="index.html" method="post">
-        <div class="form__flex">
-          <input type="text" placeholder="First name">
-          <input type="text" placeholder="Last name">
-        </div>
-        <div class="form__flex">
-          <select class="form__select  form__select-registration" name="">
-            <option value="">Country of Residence</option>
-          </select>
-          <div class="form__right">
-            <input type="number" placeholder="Country Code">
-            <input type="tel" placeholder="Phone">
-          </div>
-        </div>
-        <div class="form__flex">
-          <input type="email" placeholder="Email">
-          <select class="form__select  form__select-registration" name="">
-            <option value="">Currency</option>
-          </select>
-        </div>
-        <p class="registration__title">Your email will be used only for the purpose of opening your trading account and will not be shared with third parties.</p>
-        <div class="form__flex">
-          <select class="form__select  form__select-registration" name="">
-            <option value="">Leverage</option>
-          </select>
-          <select class="form__select  form__select-registration" name="">
-            <option value="">Deposit Amount</option>
-          </select>
-        </div>
-        <div class="form__flex">
-          <input type="password" placeholder="Password">
-          <input type="password" placeholder="Confirm Password">
-        </div>
-        <p class="registration__title">Tip: Strong passwords uses a conbination of numbers, symbols, capital and small letters. If you want we can generate one for you.</p>
-        <p class="registration__title">I wish to receive newsletters and other communication material:</p>
-        <div class="form__flex  form__flex--radio">  
-          <input id="y" type="radio" name="y/n" value="yes">
-          <label for="y">Yes</label>
-          <input id="n" type="radio" name="y/n" value="no">
-          <label for="n">No</label>
-        </div>
-        <button type="submit" name="submit">Register</button>
-      </form>
-      <hr>
-      <div class="container">
-        
-      </div>
-      <p class="registration__title  registration__title--pb">Risk Warning: Our products are traded on margin and carry a high level of risk and it is possible to lose all your capital. These products may not be suitable for everyone and you should ensure that you understand the risks involved.</p>
+      <table>
+        <tr class="funding__title">
+          <th>Payment Method</th>
+          <th>Deposit Fee</th>
+          <th>Deposit Time</th>
+          <th>Withdrawal Fee</th>
+          <th>Widthdrawal Processing Time</th>
+        </tr>
+        <tr>
+          <td class="funding__pay-img">
+            <!-- <img src="../img/table-1.png" alt=""> -->
+          </td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>1 EUR*</td>
+          <td>1 Working Day**</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>Covered by Us!</td>
+          <td>2-5 working days</td>
+          <td>Dependent on amount<br>& banks involved</td>
+          <td>1 Working Day**<br><a href="#">Deposit Bank Accounts</a></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>0.15 EUR</td>
+          <td>1 Working Day</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>0.15 EUR</td>
+          <td>1 Working Day</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>0.15 EUR</td>
+          <td>1 Working Day</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>0.15 EUR</td>
+          <td>1 Working Day</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>0.15 EUR</td>
+          <td>1 Working Day</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>N/A</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>N/A</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>N/A</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>N/A</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>N/A</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>N/A</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>N/A</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>N/A</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>N/A</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>N/A</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>N/A</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>N/A</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>N/A</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>2%</td>
+          <td>1 Working Day</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>6% + 0.15 EUR</td>
+          <td>1 Working Day</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>2.8%</td>
+          <td>1 Working Day</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>Covered by Us!</td>
+          <td>1 hour</td>
+          <td>4.9%</td>
+          <td>1 Working Day</td>
+        </tr>
+      </table>
+      <p class="funding__pb">*An additional €5 fee will apply for amounts above the initial deposited amount.<br>**It can take an additional 2-5 working days for the banks to process the amount into your account.</p>
     </div>
   </section>
   <section class="payment  payment--temp">
@@ -174,6 +306,8 @@
       </div>
     </div>
   </footer>
+<!-- <script src="js/jquery.min.js"></script> -->
+<!-- <script src="js/slick/slick.min.js"></script> -->
 <script src="../js/mobile-menu.js"></script>
 </body>
 </html>
